--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "my-plenti-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "postcss css/pre-tailwind.css -o assets/global-tailwind.css"
+    "build": "postcss styles/tailwind.source.css -o assets/tailwind.global.css"
   },
   "private": true,
   "dependencies": {
     "navaid": "^1.2.0",
-    "postcss-cli": "^8.3.1",
     "regexparam": "^1.3.0",
-    "svelte": "^3.32.3",
-    "tailwindcss": "^2.2.0"
+    "svelte": "^3.32.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.2.2"
   }
 }
