Dogfood refactor and cleanup

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "compendium-theme",
   "version": "0.2.0",
   "scripts": {
-    "prebuild": "cp styles/$(grep -m 1 colorScheme content/index.json | awk '{ gsub(/[[:punct:]]/, \"\"); print $2 }').css assets/color-scheme.css",
-    "build": "postcss styles/tailwind.source.css -o assets/tailwind.global.css"
+    "prescheme": "cp styles/$(grep -m 1 colorScheme content/index.json | awk '{ gsub(/[[:punct:]]/, \"\"); print $2 }').css assets/color-scheme.css",
+    "scheme": "postcss styles/tailwind.source.css -o assets/tailwind.global.css"
   },
   "private": true,
   "dependencies": {
