--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "compendium-theme",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "update:scheme": "cp styles/$(grep -m 1 colorScheme content/index.json | awk '{ gsub(/[[:punct:]]/, \"\"); print $2 }').css assets/color-scheme.css",
     "prebuild:dev": "npm run update:scheme",
     "build:dev": "postcss styles/tailwind.source.css -o assets/tailwind.global.css",
-    "build:prod": "NODE_ENV=production npm run build:dev"
+    "build:prod": "NODE_ENV=production npm run build:dev",
+    "prebuild": "npm run build:prod",
+    "build": "plenti build",
+    "postbuild": "npm run static",
+    "preperms": "find ./{assets,content,layouts,styles,public,static} -type d -exec chmod 755 {} +",
+    "perms": "find ./{assets,content,layouts,styles,public,static} -type f -exec chmod 644 {} +",
+    "postperms": "$(cd static && rm -rf * && cp -r ../public/* .)",
+    "prestatic": "npm run perms",
+    "static": "$(cd static && git add -A)",
+    "poststatic": "$(cd static && git commit -q -m 'Update static site') &>/dev/null",
+    "publish": "$(cd static && git push -q -u origin main)"
   },
   "private": true,
   "dependencies": {
     "navaid": "^1.2.0",
     "regexparam": "^1.3.0",
-    "svelte": "^3.32.3"
+    "svelte": "~3.38.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
