--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quantified-leap",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "scripts": {
     "style": "postcss styles/tailwind.source.css -o assets/tailwind.global.css",
     "theme": "cp styles/$(grep -m 1 colorScheme content/index.json | awk '{ gsub(/[[:punct:]]/, \"\"); print $2 }').css assets/color-scheme.css",
@@ -16,8 +16,7 @@
   "dependencies": {
     "navaid": "^1.2.0",
     "regexparam": "^1.3.0",
-    "svelte": "~3.38.3",
-    "wrangler": "^0.0.15"
+    "svelte": "~3.38.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
@@ -25,6 +24,7 @@
     "postcss": "^8.3.5",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.2",
-    "daisyui": "^1.22.2"
+    "daisyui": "^1.22.2",
+    "wrangler": "^0.0.15"
   }
 }
